# Protocol

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md
include/: raylib.h
src/: GameState.h  Item.h  ItemDefs.h  Player.h  main  main.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
